Added div container to iFrame for video bug

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     </ul>
   </nav>
   <article id="hero-area">
-      <iframe src="https://player.vimeo.com/video/349761701" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="hero-video"></iframe>
+    <div class="video-container">
+      <iframe src="https://player.vimeo.com/video/349761701" width="640" height="751" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    </div>
     <div id="legend-container">
       <h2 id="intro-heading">Mathematics looks awesome on digital screens</h2>
       <p id="site-legend">
