Added home address now that the site is working!

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body id="body">
   <nav>
     <ul id="nav-bar">
-      <li id="logo"><a href="#hero-area">p5.js | MATH IN MOTION</a></li>
+      <li id="logo"><a href="https://math-in-motion.github.io/early-demo/">p5.js | MATH IN MOTION</a></li>
       <li id="home"><a href="#hero-area">Home</a></li>
       <li id="demo"><a href="#sticky-content">Demo</a></li>
       <li id="about"><a href="#about-heading">About</a></li>
