Fixed broken "Tips" link

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       This project was made possible by <em><a href="https://summerofcode.withgoogle.com/">Google Summer of Code 2019</a></em> and the <em><a href="http://processingfoundation.org">Processing Foundation.</a></em><br><br>
 
       Please keep in mind: We were complete noobs to <br> web development at the beginning this project, <br> and
-      honestly, we still are. <em><a href="http://https://docs.google.com/forms/d/e/1FAIpQLSfvj-Rl70SucoTN3Rzo8iyYSsTeZfxU5GTdxMHNvCe0FKzrZQ/viewform"> Tips</a></em> from experienced developers are kindly appreciated.
+      honestly, we still are. <em><a href="https://docs.google.com/forms/d/e/1FAIpQLSfvj-Rl70SucoTN3Rzo8iyYSsTeZfxU5GTdxMHNvCe0FKzrZQ/viewform"> Tips</a></em> from experienced developers are kindly appreciated.
     </p>
     <p id="dev-team">
       Developed by :<br>
