--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
       @ Columbia University<br><br>
 
       GSoC Mentors :<br>
-      Hellen Nickles and<br>
+      Ellen Nickles and<br>
       Greg Benedis-Grab
     </p>
   </div>
